--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ p,li,a{
     letter-spacing: 0.1rem;
     font-weight: 400;
     color: var(--para-color);
+    line-height: 1.5;
 }
 a{
     text-decoration: none;
@@ -68,13 +69,15 @@ li{
 .btn{
     display: inline-block;
     padding: 1.2rem 3.2rem;
-    background-color:#0e366f;
+    background-color:#074192;
     color: var(--supporting-color);
     border-radius: 0.6rem;
     -webkit-boarder-radius:0.6rem;
     -moz-boarder-radius:0.6rem;
     -ms-boarder-radius:0.6rem;
     -o-boarder-radius:0.6rem;
+    position: relative;
+    z-index: 1;
 }
 .btn:hover{
     background-color: var(--bnt-hover-color);
@@ -113,9 +116,10 @@ li{
 }
 /* main page section */
 main{
+    position: relative;
     background-image: linear-gradient(
         to top right,
-        #3d86ea,
+        #5892e4,
         #4484fb,
         #679eff,
         #b3d2ff,
@@ -125,4 +129,41 @@ main{
 .section-hero .grid{
     align-items: center;
     gap: 6.4rem;
+     
+
+    
+}
+.main-heading{
+    font-size: 5.8rem;
+    font-weight: 500;
+    font-family: "jost";
+    color:#021635;
+    line-height: 1.3;
+}
+.main-paragraph{
+    color: #b3d2ff;
+    margin: 2rem 0 4rem 0;
+    
+}
+/* shape divider */
+.custom-shape-divider-bottom-1738875419 {
+    position: relative;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
+}
+
+.custom-shape-divider-bottom-1738875419 svg {
+    position: relative;
+    display: block;
+    width: calc(101% + 1.3px);
+    height: 100px;
+}
+
+.custom-shape-divider-bottom-1738875419 .shape-fill {
+    fill: #FFFFFF;
 }
