--- a/style.css
+++ b/style.css
@@ -364,6 +364,9 @@ gap: 3.4rem;
     height: 100%;
     width: auto;
 }
+.contain{
+    padding: 0 1.4rem;
+}
 /** contact home section**/
 .section-contact-homepage{
     background-color:white;
@@ -516,4 +519,123 @@ textarea:focus-visible{
 }
 ::-webkit-scrollbar-thumb:hover{
     background-color: var(--heading-color);
+}
+
+/* media quearies section */
+@media (max-width:1400px){
+    html{
+        font-size: 56.25%;
+    }
+    .section-hero{
+        width: 90%;
+    }
+}
+@media(max-width:1220px){
+    html{
+        font-size: 54%;
+    }
+}
+@media(max-width:1100px){
+    .section-course .grid-four--cols{
+        grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    }
+    .section-choice{
+        & .choose-left--div{
+            order:2 ;
+        }
+        & .choose-right--div{
+            order: 3;
+        }
+        &.choice-center-div{
+            order: 1;
+            & figure ::before{
+                width: 0;
+                height: 0;
+                background-color: transparent;
+                padding: 0;
+            }
+            & figure::after{
+                width: 0;
+                height: 0;
+                background-color: transparent;
+                padding: 0;
+            }
+        }
+    }
+}
+@media(max-width:998){
+    .section-hero{
+        height: auto;
+        padding-bottom: 6rem;
+        & .grid-two--cols{
+            grid-template-columns: 1fr;
+            & .section-hero-content{
+                order: 2;
+            }
+            & .hero-image{
+                order:1;
+
+                & img{
+                    width: 50%;
+                }
+            }
+        }
+    }
+    footer .grid-four--cols{
+        grid-template-columns: repeat(3,minmax(100px,1fr));
+        text-align: left;
+        & .footer-1--div{
+            grid-row: 2/3;
+            grid-column: 1/-1;
+            margin: 6.4rem;
+        }
+    }
+    .section-about .about-div{
+        text-align: left;
+    }
+}
+@media(max-width:768px){
+    .grid-two--cols,.grid-three--cols{
+        grid-template-columns: 1fr;
+
+    }
+   
+    .navbar-section .container{
+        display: flex;
+        flex-direction: column;
+        & .navbar ul{
+            gap:2.4rem;
+        }
+
+        & .logo-image{
+            text-align: center;
+            margin-bottom: 2.4rem;
+        }
+    }
+    .section-hero .grid .main-heading{
+        font-size: 3.6rem;
+    }
+    .section-choice{
+        & img{
+            width: 30%;
+
+        }
+    }
+    .section-choice .text-align--right .choice-div1{
+        display: flex;
+        flex-direction: column;
+        justify-content: start;
+        align-items: start;
+        text-align: left;
+    }
+    .contact-title{
+        font-size: 2.4rem;
+    }
+    .section-contact-homepage .btn{
+        display: block;
+        text-align: center;
+    }
+    :is(.section-contact-homepage).container:first-child{
+        padding: 6.4rem 0 2.4rem 0;
+    }
 }
